--- a/docs/admin/40.backups/index.mdx
+++ b/docs/admin/40.backups/index.mdx
@@ -5,10 +5,7 @@ title: 🚑 Backups
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-import Highlight from '@site/src/components/Highlight';
-import {HighlightWebAdmin, HighlightDiagnosis, HighlightApplications, HighlightAppInstall} from '@site/src/components/Highlight';
-
-In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
+In the context of self-hosting, backups are essential for mitigating the impact of unexpected events—such as fires, database corruption, server access issues, or security breaches. The backup strategy you implement should be tailored to the importance of the services and data you are managing. For instance, backing up a test server will be of little interest, whereas when handling critical data for an NGO or business, backups become much more vital. In these cases, it’s crucial to store backups in one, or ideally **several** locations.
 
 ## Manual backup
 
