Misc syntax tweaks, fixes

--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -15,20 +15,24 @@ For a VPS, please use the public IP address instead of the local domain or addre
 :::
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="From the web interface">
+<TabItem value="web" label="From the web interface">
 
-    :::warning
-    During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/admin/domains/certificate).  For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
-    :::
+:::warning
+During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/admin/domains/certificate). For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
+:::
 
-    You should then land on this page:
-    <Figure caption="Preview of the Web initial configuration page" src="/img/webadmin/postinstall_web.png"/>
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
-    You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/admin/command_line).
+You should then land on this page:
 
-    <Figure caption="Preview of the command-line post-installation" src="/img/postinstall_cli.png"/>
-  </TabItem>
+<Figure caption="Preview of the Web initial configuration page" src="/img/webadmin/postinstall_web.png"/>
+
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
+You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/admin/command_line).
+
+<Figure caption="Preview of the command-line post-installation" src="/img/postinstall_cli.png"/>
+
+</TabItem>
 </Tabs>
 
 ### <FAIcon icon="fa-globe"/> Main domain
@@ -73,10 +77,10 @@ This user replaces the old `admin` user, which some old documentation page may s
 
 Once the postinstall is done, you should be able to actually log in the web admin interface using the credentials of the first user you just created.
 
-The diagnosis system is meant to provide an easy way to validate that all critical aspects of your server are properly configured - and guide you in how to fix issues. The diagnosis will run twice a day and send an alert if issues are detected.
+The diagnosis system is meant to provide an easy way to validate that all critical aspects of your server are properly configured - and guide you in how to fix issues. The diagnosis will run twice a day and send an alert by email if issues are detected.
 
 :::tip
-**Don't run away** ! The first time you run the diagnosis, it is quite expected to see a bunch of yellow/red alerts because you typically need to [configure DNS records](/admin/get_started/post_install/dns_config) (if not using a `.nohost.me`/`noho.st`/`ynh.fr` domain), add a swapfile if not enough ram as well as [port forwarding](/admin/get_started/post_install/port_forwarding) on your home's router.
+**Don't run away** ! The first time you run the diagnosis, it is quite expected to see a bunch of yellow/red alerts because you typically need to [configure DNS records](/admin/get_started/post_install/dns_config) (if not using a `.nohost.me`/`noho.st`/`ynh.fr` domain), as well as [port forwarding](/admin/get_started/post_install/port_forwarding) on your home's router.
 :::
 
 :::tip
@@ -89,19 +93,21 @@ Especially, installations on WSL or virtual machines will likely not be reachabl
 
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="(Recommended) From the web interface">
+<TabItem value="web" label="(Recommended) From the web interface">
 
-    To run a diagnosis, go on Web Admin in the Diagnosis section. Click Run initial diagnosis and you should get a screen like this:
+To run a diagnosis, go on Web Admin in the Diagnosis section. Click Run initial diagnosis and you should get a screen like this:
 
-    <Figure caption="Preview of the diagnostic panel" src="/img/webadmin/diagnostic.png"/>
+<Figure caption="Preview of the diagnostic panel" src="/img/webadmin/diagnostic.png"/>
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
+
 ```bash
 yunohost diagnosis run
 yunohost diagnosis show --issues --human-readable
 ```
-  </TabItem>
+
+</TabItem>
 </Tabs>
 
 
@@ -112,19 +118,20 @@ Once you configured DNS records and port forwarding (if needed), you should be a
 For more detailed instructions, or to lean more about SSL/TLS certificates, see [the corresponding page here](/admin/domains/certificate).
 
 <Tabs groupId="admin-commands">
-  <TabItem value="web" label="From the web interface">
+<TabItem value="web" label="From the web interface">
 
-    Go in Domains > Click on your domain > Certificate
+Go in Domains > Click on your domain > Certificate
 
-    <Figure caption="Preview of the diagnostic panel" src="/img/webadmin/certificate-before-LE.png"/>
+<Figure caption="Preview of the diagnostic panel" src="/img/webadmin/certificate-before-LE.png"/>
 
-  </TabItem>
-  <TabItem value="cli" label="From the command line">
+</TabItem>
+<TabItem value="cli" label="From the command line">
 
 ```bash
 yunohost domain cert install
 ```
-  </TabItem>
+
+</TabItem>
 </Tabs>
 
 ## 🎉 Congratz!
