--- a/docs/admin/45.tutorials/55.moving_app_folder.mdx
+++ b/docs/admin/45.tutorials/55.moving_app_folder.mdx
@@ -1,6 +1,5 @@
 ---
-sidebar_label: Move apps storage
-title: Moving an app folder to a different storage
+title: Moving an app folder to a different storage location
 ---
 
 Applications folder are (*usually*) located in `/var/www/$appname`
