--- a/po4a/admin/05.get_started__40.post_install__20.dns_config/fr.po
+++ b/po4a/admin/05.get_started__40.post_install__20.dns_config/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-09 21:01+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-09 23:48+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/05get_started__40post_install__20dns_config/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/05get_started__40post_install__20dns_config/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,12 +40,9 @@ msgid ""
 "easily accessible by human beings, and for some services like mail to work\n"
 "properly, DNS must be configured.\n"
 msgstr ""
-"Le DNS (système de nom de domaine) est un élément essentiel d'Internet qui "
-"permet de convertir des adresses compréhensibles par les êtres humains\n"
-"(les noms de domaines) en adresses compréhensibles par la machine "
-"(les adresses IP). Pour que votre serveur soit\n"
-"facilement accessible par d'autres êtres humains, et pour que certains "
-"services comme le mail fonctionnent\n"
+"Le DNS (système de nom de domaine) est un élément essentiel d'Internet qui permet de convertir des adresses compréhensibles par les êtres humains\n"
+"(les noms de domaines) en adresses compréhensibles par la machine (les adresses IP). Pour que votre serveur soit\n"
+"facilement accessible par d'autres êtres humains, et pour que certains services comme le mail fonctionnent\n"
 "correctement, il est nécessaire de configurer la zone DNS de votre domaine.\n"
 
 #. type: Plain text
