--- a/po4a/admin/02.what_is_yunohost__20.demo/fr.po
+++ b/po4a/admin/02.what_is_yunohost__20.demo/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2025-11-09 20:53+0100\n"
 "PO-Revision-Date: 2025-11-10 01:02+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/02what_is_yunohost__20demo/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/02what_is_yunohost__20demo/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,10 +40,7 @@ msgstr "Essayer YunoHost sur un serveur de démonstration"
 #: docs/admin/02.what_is_yunohost/20.demo.mdx:12
 #, no-wrap
 msgid "This demo server is reset *every 30 minutes* and could be down from time to time, but at least you can test and that's really cool :)\n"
-msgstr ""
-"Cette démo est *réinitialisée toutes les 30 minutes* et peut cesser de "
-"fonctionner de temps en temps, mais au moins vous pouvez tester, et ça c’est "
-"vraiment chouette :)\n"
+msgstr "Cette démo est *réinitialisée toutes les 30 minutes* et peut cesser de fonctionner de temps en temps, mais au moins vous pouvez tester, et ça c’est vraiment chouette :)\n"
 
 #. type: Plain text
 #: docs/admin/02.what_is_yunohost/20.demo.mdx:20
@@ -75,7 +72,4 @@ msgstr "  } <FAIcon icon='fa-cog'/> Interface d’administration {\n"
 #: docs/admin/02.what_is_yunohost/20.demo.mdx:39
 #, no-wrap
 msgid "**Demo server gracefully provided by [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon=\"fa-heart\" style={{color: \"green\"}}/>**\n"
-msgstr ""
-"**Le serveur de démo est fourni généreusement par [Gitoyen]"
-"(https://www.gitoyen.net?target=_blank) <FAIcon icon=\"fa-heart\" "
-"style={{color: \"green\"}}/>**\n"
+msgstr "**Le serveur de démo est fourni généreusement par [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon=\"fa-heart\" style={{color: \"green\"}}/>**\n"
