--- a/po4a/admin/05.get_started__10.providers__05.registrar__gandi/fr.po
+++ b/po4a/admin/05.get_started__10.providers__05.registrar__gandi/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2025-11-09 20:53+0100\n"
 "PO-Revision-Date: 2025-11-09 21:16+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/05get_started__10providers__05registrar__gandi/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/05get_started__10providers__05registrar__gandi/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
