--- a/po4a/admin/05.get_started__10.providers__15.vpn__index/fr.po
+++ b/po4a/admin/05.get_started__10.providers__15.vpn__index/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-09 20:53+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-10 01:02+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/05get_started__10providers__15vpn__index/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/05get_started__10providers__15vpn__index/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,14 +34,7 @@ msgstr "Fournisseurs VPN"
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:9
 #, no-wrap
 msgid "Since setting up a server at home is an uncommon practice, most Internet connections provided to individuals are unsuitable for this purpose especially if you desire to send mail. A net neutral VPN providing a dedicated fixed public IPv4 address and IPv6 addresses [can help to circumvent some limitations or difficulties](/admin/get_started/providers/vpn/vpn_advantage).\n"
-msgstr ""
-"Étant donné que la mise en place d'un serveur à domicile est une pratique "
-"peu courante, la plupart des connexions internet fournies aux particuliers "
-"ne sont pas adaptées à cette fin, en particulier si vous souhaitez envoyer "
-"des courriels. Un VPN neutre fournissant une adresse IPv4 publique fixe "
-"dédiée et des adresses IPv6 "
-"[peut aider à contourner certaines limitations ou difficultés]"
-"(/admin/get_started/providers/vpn/vpn_advantage).\n"
+msgstr "Étant donné que la mise en place d'un serveur à domicile est une pratique peu courante, la plupart des connexions internet fournies aux particuliers ne sont pas adaptées à cette fin, en particulier si vous souhaitez envoyer des courriels. Un VPN neutre fournissant une adresse IPv4 publique fixe dédiée et des adresses IPv6 [peut aider à contourner certaines limitations ou difficultés](/admin/get_started/providers/vpn/vpn_advantage).\n"
 
 #. type: Plain text
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:13
@@ -55,11 +48,7 @@ msgstr ""
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:15
 #, no-wrap
 msgid "Below, you can find a list of providers compatible for self-hosting and especially those providing .cube format for VPNClient apps and those providing [internetcube](https://internetcu.be).\n"
-msgstr ""
-"Ci-dessous, vous trouverez une liste de fournisseurs compatibles avec l'auto-"
-"hébergement et en particulier ceux qui fournissent le format .cube pour les "
-"applications VPNClient et ceux qui fournissent [internetcube]"
-"(https://internetcu.be).\n"
+msgstr "Ci-dessous, vous trouverez une liste de fournisseurs compatibles avec l'auto-hébergement et en particulier ceux qui fournissent le format .cube pour les applications VPNClient et ceux qui fournissent [internetcube](https://internetcu.be).\n"
 
 #. type: Fenced div block (info)
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:16
@@ -70,12 +59,10 @@ msgid ""
 "- port forwarding or opened features\n"
 "- net neutrality: no traffic analysis, no user data resale, no alteration of traffic (without legal obligations)...\n"
 msgstr ""
-"Par **compatible pour l'auto-hébergement**, nous entendons des offres VPN "
-"avec au moins :\n"
+"Par **compatible pour l'auto-hébergement**, nous entendons des offres VPN avec au moins :\n"
 "- un IPv4 public dédié fixe\n"
 "- des fonctionnalités de redirection de port ou d'ouverture\n"
-"- neutralité du réseau : pas d'analyse du trafic, pas de revente des données "
-"des utilisateurs, pas d'altération du trafic (sans obligations légales)...\n"
+"- neutralité du réseau : pas d'analyse du trafic, pas de revente des données des utilisateurs, pas d'altération du trafic (sans obligations légales)...\n"
 
 #. type: Title ##
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:23
@@ -85,25 +72,22 @@ msgstr "Sites anglophones"
 
 #. type: Plain text
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:27
+#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:44
+#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:68
 #, no-wrap
 msgid ""
 "| VPN provider | [VPNClient](https://github.com/labriqueinternet/vpnclient_ynh) compatibility | IPv6 | rDNS IPv4 | rDNS IPv6 | Price | Membership | Net Neutrality |\n"
 "| ------------ | ---------------------------------------------------------------------------- | ---- | --------- | --------- | ----- | ---------- | -------------- |\n"
 msgstr ""
-"| Fournisseur VPN | Compatibilité [VPNClient]"
-"(https://github.com/labriqueinternet/vpnclient_ynh) | IPv6 | rDNS IPv4 | "
-"rDNS IPv6 | Prix | Adhésion | Neutralité du net |\n"
-"| ------------ | "
-"---------------------------------------------------------------------------- "
-"| ---- | --------- | --------- | ----- | ---------- | -------------- |\n"
+"| Fournisseur VPN | Compatibilité [VPNClient](https://github.com/labriqueinternet/vpnclient_ynh) | IPv6 | rDNS IPv4 | rDNS IPv6 | Prix | Adhésion | Neutralité du net |\n"
+"| ------------ | ---------------------------------------------------------------------------- | ---- | --------- | --------- | ----- | ---------- | -------------- |\n"
 
 #. type: Plain text
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:30
+#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:63
 #, no-wrap
 msgid "¹ [Pay what you want](https://en.wikipedia.org/wiki/Pay_what_you_want)\n"
-msgstr ""
-"¹ [Prix libre / payez ce que vous voulez]"
-"(https://en.wikipedia.org/wiki/Pay_what_you_want)\n"
+msgstr "¹ [Prix libre / payez ce que vous voulez](https://en.wikipedia.org/wiki/Pay_what_you_want)\n"
 
 #. type: Fenced div block (info)
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:31
@@ -116,14 +100,9 @@ msgid ""
 "- [PureVPN](https://www.purevpn.fr/ip-vpn-dedie)\n"
 "- [RapidVPN](https://www.rapidvpn.com/vpn)\n"
 msgstr ""
-"Si vous essayez un autre fournisseur de VPN qui inclut **l'ipv4 public dédié "
-"et la redirection de port**, n'hésitez pas à contribuer à cette "
-"documentation. Nous avons besoin de personnes pour tester les offres "
-"spécifiques de ces fournisseurs commerciaux :\n"
+"Si vous essayez un autre fournisseur de VPN qui inclut **l'ipv4 public dédié et la redirection de port**, n'hésitez pas à contribuer à cette documentation. Nous avons besoin de personnes pour tester les offres spécifiques de ces fournisseurs commerciaux :\n"
 "\n"
-"- ✘ [VPN area](https://vpnarea.com/front/home/dedicated-ip) n'autorise pas "
-"la redirection du port 80. L'exécution d'un serveur web est contraire à "
-"leurs conditions d'utilisation.\n"
+"- ✘ [VPN area](https://vpnarea.com/front/home/dedicated-ip) n'autorise pas la redirection du port 80. L'exécution d'un serveur web est contraire à leurs conditions d'utilisation.\n"
 "- [Trust zone](https://trust.zone/fr/order?p=25)\n"
 "- [PureVPN](https://www.purevpn.fr/ip-vpn-dedie)\n"
 "- [RapidVPN](https://www.rapidvpn.com/vpn)\n"
@@ -135,45 +114,13 @@ msgid "French-speaking sites"
 msgstr "Sites francophones"
 
 #. type: Plain text
-#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:44
-#, fuzzy, no-wrap
-msgid ""
-"| Fournisseurs | Compatibilité [VPNClient](https://github.com/labriqueinternet/vpnclient_ynh) | IPv6 | rDNS IPv4 | rDNS IPv6 | Prix | Adhésion | Neutralité du net |\n"
-"| ------------ | ----------------------- | ---- | --------- | --------- | ----- | -------------- | -- |\n"
-msgstr ""
-"| Fournisseurs | Compatibilité [VPNClient]"
-"(https://github.com/labriqueinternet/vpnclient_ynh) | IPv6 | rDNS IPv4 | "
-"rDNS IPv6 | Prix | Adhésion | Neutralité du net |\n"
-"| ------------ | ----------------------- | ---- | --------- | --------- | "
-"----- | -------------- | -- |\n"
-
-#. type: Plain text
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:55
 #, fuzzy, no-wrap
-msgid "| [Milkywan](https://milkywan.fr/prices#popupTunnel)    | ✔ (manuelle)               | ✔    | ✔         |  ✔        | 5 € / mois | incluse | |\n"
+msgid "| [Milkywan](https://milkywan.fr/prices#popupTunnel)                   | ✔ (manuelle)         | ✔   | ✔  | ✔  | 5 € / mois          | incluse       | |\n"
 msgstr "| [Milkywan](https://milkywan.fr/prices#popupTunnel)    | ✔ (manuelle)               | ✔    | ✔         |  ✔        | 5 € / mois | incluse | |\n"
-
-#. type: Plain text
-#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:63
-#, fuzzy, no-wrap
-msgid "¹ Prix libre\n"
-msgstr "¹ Prix libre\n"
 
 #. type: Title ##
 #: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:64
 #, no-wrap
 msgid "German-speaking sites"
 msgstr "Sites germanophones"
-
-#. type: Plain text
-#: docs/admin/05.get_started/10.providers/15.vpn/index.mdx:68
-#, no-wrap
-msgid ""
-"| VPN provider | [VPNClient](https://github.com/labriqueinternet/vpnclient_ynh) compatibility | IPv6 | rDNS IPv4 | rDNS IPv6 | Price | Membership | Net Neutrality |\n"
-"| ------------ | ----------------------- | ---- | --------- | --------- | ----- | -------------- | --- |\n"
-msgstr ""
-"| Fournisseur VPN | Compatibilité [VPNClient]"
-"(https://github.com/labriqueinternet/vpnclient_ynh) | IPv6 | rDNS IPv4 | "
-"rDNS IPv6 | Prix | Adhésion | Neutralité du net |\n"
-"| ------------ | ----------------------- | ---- | --------- | --------- | "
-"----- | -------------- | --- |\n"
