--- a/po4a/admin/05.get_started__20.install_on__wsl/fr.po
+++ b/po4a/admin/05.get_started__20.install_on__wsl/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: YunoHost documentation VERSION\n"
-"POT-Creation-Date: 2025-11-09 21:01+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-09 21:16+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/05get_started__20install_on__wsl/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/05get_started__20install_on__wsl/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -217,3 +217,4 @@ msgstr ""
 #, no-wrap
 msgid "In case of crash, delete and restore the whole distro"
 msgstr ""
+
