--- a/po4a/admin/25.domains__index/fr.po
+++ b/po4a/admin/25.domains__index/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "POT-Creation-Date: 2025-11-09 20:53+0100\n"
 "PO-Revision-Date: 2025-11-10 01:02+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/25domains__index/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/25domains__index/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,13 +71,7 @@ msgstr "<TabItem value=\"nohost\" label=\"Yunohost's domains (the free and easy 
 #: docs/admin/45.tutorials/05.domains/dns_nohost_me.mdx:6
 #, no-wrap
 msgid "In order to make self-hosting as accessible as possible, the YunoHost Project provides a *free* and *automatically configured* domain name service. By using this service, you won't have to [configure DNS records](/admin/get_started/post_install/dns_config) yourself, which can be tedious and technical.\n"
-msgstr ""
-"Afin de rendre l'auto-hébergement aussi accessible que possible, le projet "
-"YunoHost fournit un service de nom de domaine *gratuit* et *configuré "
-"automatiquement*. En utilisant ce service, vous n'aurez pas à "
-"[configurer les enregistrements DNS]"
-"(/admin/get_started/post_install/dns_config) vous-même, ce qui peut être "
-"fastidieux et technique.\n"
+msgstr "Afin de rendre l'auto-hébergement aussi accessible que possible, le projet YunoHost fournit un service de nom de domaine *gratuit* et *configuré automatiquement*. En utilisant ce service, vous n'aurez pas à [configurer les enregistrements DNS](/admin/get_started/post_install/dns_config) vous-même, ce qui peut être fastidieux et technique.\n"
 
 #. type: Plain text
 #: docs/admin/25.domains/index.mdx:26
