--- a/po4a/admin/45.tutorials__05.domains__dns_nohost_me/fr.po
+++ b/po4a/admin/45.tutorials__05.domains__dns_nohost_me/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: YunoHost documentation VERSION\n"
-"POT-Creation-Date: 2025-11-09 21:01+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-10 01:02+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/45tutorials__05domains__dns_nohost_me/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/45tutorials__05domains__dns_nohost_me/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,13 +23,7 @@ msgstr ""
 #: docs/admin/45.tutorials/05.domains/dns_nohost_me.mdx:6
 #, no-wrap
 msgid "In order to make self-hosting as accessible as possible, the YunoHost Project provides a *free* and *automatically configured* domain name service. By using this service, you won't have to [configure DNS records](/admin/get_started/post_install/dns_config) yourself, which can be tedious and technical.\n"
-msgstr ""
-"Afin de rendre l'auto-hébergement aussi accessible que possible, le projet "
-"YunoHost fournit un service de nom de domaine *gratuit* et *configuré "
-"automatiquement*. En utilisant ce service, vous n'aurez pas à "
-"[configurer les enregistrements DNS]"
-"(/admin/get_started/post_install/dns_config) vous-même, ce qui peut être "
-"fastidieux et technique.\n"
+msgstr "Afin de rendre l'auto-hébergement aussi accessible que possible, le projet YunoHost fournit un service de nom de domaine *gratuit* et *configuré automatiquement*. En utilisant ce service, vous n'aurez pas à [configurer les enregistrements DNS](/admin/get_started/post_install/dns_config) vous-même, ce qui peut être fastidieux et technique.\n"
 
 #. type: Plain text
 #: docs/admin/25.domains/index.mdx:26
