--- a/po4a/admin/45.tutorials__40.torhiddenservice/fr.po
+++ b/po4a/admin/45.tutorials__40.torhiddenservice/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-09 21:01+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-09 23:48+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/45tutorials__40torhiddenservice/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/45tutorials__40torhiddenservice/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,11 +37,8 @@ msgid ""
 "This tuto is not finished ! Some data could leak with this setup like the main domain of your YunoHost, so it's not a \"Hidden Service\".\n"
 "See [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en).\n"
 msgstr ""
-"Ce tuto n'est pas complet ! Des données peuvent être récupérées avec cette "
-"installation comme le nom de domaine principal de votre YunoHost, donc ce "
-"n'est pas un \"service caché\".\n"
-"Voir [la documentation officielle de Tor sur les services cachés]"
-"(https://www.torproject.org/docs/tor-hidden-service.html.en) (en anglais)\n"
+"Ce tuto n'est pas complet ! Des données peuvent être récupérées avec cette installation comme le nom de domaine principal de votre YunoHost, donc ce n'est pas un \"service caché\".\n"
+"Voir [la documentation officielle de Tor sur les services cachés](https://www.torproject.org/docs/tor-hidden-service.html.en) (en anglais)\n"
 
 #. type: Title ###
 #: docs/admin/45.tutorials/40.torhiddenservice.mdx:11
@@ -108,3 +105,4 @@ msgstr "Vérifier que l'on a pas fait d'erreurs dans la configuration de NGINX"
 #, fuzzy, no-wrap
 msgid "Restart NGINX"
 msgstr "Si tout est OK on applique les modifications de la configuration"
+
