--- a/po4a/admin/55.upgrade__index/fr.po
+++ b/po4a/admin/55.upgrade__index/fr.po
@@ -6,11 +6,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-11-09 21:01+0100\n"
+"POT-Creation-Date: 2025-11-10 02:13+0100\n"
 "PO-Revision-Date: 2025-11-09 21:16+0000\n"
 "Last-Translator: Weblate Admin <yunohost@translate.yunohost.org>\n"
-"Language-Team: French <https://translate.yunohost.org/projects/"
-"doc-experimental/55upgrade__index/fr/>\n"
+"Language-Team: French <https://translate.yunohost.org/projects/doc-"
+"experimental/55upgrade__index/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,3 +57,4 @@ msgstr "Cliquez sur les boutons verts pour lancer les mises à jour du système 
 #, fuzzy, no-wrap
 msgid "Here are some example of corresponding command lines:\n"
 msgstr "Voici quelques exemples en ligne de commande correspondants :\n"
+
